Harden backend data consistency, filtering, and autocomplete support