@@ -7,7 +7,6 @@ import com.example.lorryManagement.mapper.LorryMapper;
 import com.example.lorryManagement.service.LorryService;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import jakarta.validation.Valid;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -19,7 +18,6 @@ import org.springframework.web.bind.annotation.*;
 import java.net.URI;
 import java.time.LocalDate;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/lorry")
@@ -34,11 +32,10 @@ public class LorryController {
             summary = "Create a new LR entry",
             description = "Creates a new lorry receipt with LR number, lorry details, consignor info, weight and freight. Returns 409 if the LR already exists."
     )
-    @ApiResponses({
-            @ApiResponse(responseCode = "201", description = "LR created successfully"),
-            @ApiResponse(responseCode = "409", description = "LR already exists"),
-            @ApiResponse(responseCode = "400", description = "Invalid request data")
-    })
+    @ApiResponse(responseCode = "201", description = "LR created successfully")
+    @ApiResponse(responseCode = "409", description = "LR already exists")
+    @ApiResponse(responseCode = "400", description = "Invalid request data")
+
     @PostMapping
     public ResponseEntity<LorryResponseDto> addLorry(@Valid @RequestBody LorryRequestDto lorryRequestDto) {
         LorryEntity toSave = LorryMapper.toEntity(lorryRequestDto);
@@ -50,10 +47,9 @@ public class LorryController {
             summary = "Get LR by its number",
             description = "Returns details of a single LR by its LR number. Returns 404 if not found."
     )
-    @ApiResponses({
-            @ApiResponse(responseCode = "404", description = "LR does not exist"),
-            @ApiResponse(responseCode = "200", description = "LR fetched successfully")
-    })
+    @ApiResponse(responseCode = "404", description = "LR does not exist")
+    @ApiResponse(responseCode = "200", description = "LR fetched successfully")
+
     @GetMapping("/{lr}")
     public ResponseEntity<LorryResponseDto> getLorry(@PathVariable("lr") Long lr) {
         Optional<LorryEntity> entity = lorryService.findByLr(lr);
@@ -81,23 +77,17 @@ public class LorryController {
             @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate from,
             @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate to,
             Pageable pageable) {
-        Page<LorryEntity> page = lorryService.findAll(pageable);
 
-        if (date != null) {
-            page = lorryService.findByDate(date, pageable);
-        }
-        else if (lorryNumber != null && !lorryNumber.isBlank()) {
-            page = lorryService.findByLorryNumber(lorryNumber, pageable);
-        }
-        else if (from != null || to != null) {
-            page = lorryService.findByDateRange(
-                    Objects.requireNonNullElseGet(from, () -> LocalDate.of(1900,1,1)),
-                    Objects.requireNonNullElseGet(to, LocalDate::now),
-                    pageable);
-        }
+        Page<LorryEntity> page = lorryService.findWithFilters(
+                lorryNumber,
+                date,
+                from,
+                to,
+                pageable
+        );
 
         // mapping entities
-        List<LorryResponseDto> dtos = page.getContent().stream().map(LorryMapper::toDto).collect(Collectors.toList());
+        List<LorryResponseDto> dtos = page.getContent().stream().map(LorryMapper::toDto).toList();
 
         Page<LorryResponseDto> dtoPage = new PageImpl<>(dtos, pageable, page.getTotalElements());
 
@@ -108,11 +98,10 @@ public class LorryController {
             summary = "Update an existing LR entry",
             description = "Updates non-null fields of an existing LR. Returns 404 if the LR does not exist."
     )
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Updated successfully"),
-            @ApiResponse(responseCode = "400", description = "Path LR and body LR do not match"),
-            @ApiResponse(responseCode = "404", description = "LR does not exist")
-    })
+    @ApiResponse(responseCode = "200", description = "Updated successfully")
+    @ApiResponse(responseCode = "400", description = "Path LR and body LR do not match")
+    @ApiResponse(responseCode = "404", description = "LR does not exist")
+
     @PutMapping("/{lr}")
     public ResponseEntity<LorryResponseDto> updateLorry(@PathVariable Long lr, @Valid @RequestBody LorryRequestDto dto) {
         if (!Objects.equals(lr, dto.getLr())) {
@@ -128,10 +117,9 @@ public class LorryController {
             summary = "Delete an LR entry",
             description = "Deletes the LR with the given LR number. Returns 204 on success, 404 if the LR does not exist."
     )
-    @ApiResponses({
-            @ApiResponse(responseCode = "204", description = "LR deleted successfully"),
-            @ApiResponse(responseCode = "404", description = "LR not found")
-    })
+    @ApiResponse(responseCode = "204", description = "LR deleted successfully")
+    @ApiResponse(responseCode = "404", description = "LR not found")
+
     @DeleteMapping("/{lr}")
     public ResponseEntity<Void> deleteLorry(@PathVariable Long lr) {
         lorryService.deleteByLr(lr);
@@ -142,5 +130,25 @@ public class LorryController {
     public Map<String, Long> getNextLr() {
         Long nextLr = lorryService.getNextLr();
         return Collections.singletonMap("lr", nextLr);
+    }
+
+    @GetMapping("/distinct/lorry-numbers")
+    public List<String> getLorryNumbers() {
+        return lorryService.getDistinctLorryNumbers();
+    }
+
+    @GetMapping("/distinct/from-locations")
+    public List<String> getDistinctFromLocations() {
+        return lorryService.getDistinctFromLocations();
+    }
+
+    @GetMapping("/distinct/to-locations")
+    public List<String> getDistinctToLocations() {
+        return lorryService.getDistinctToLocations();
+    }
+
+    @GetMapping("/distinct/consignors")
+    public List<String> getDistinctConsignors() {
+        return lorryService.getDistinctConsignorNames();
     }
 }
